# storyrs

./: .gitignore  Cargo.toml  analysis_options.yaml  build.rs  pubspec.yaml
lib/: channels.dart  home.dart  main.dart  theme.dart
lib/l10n/: intl_en.arb  intl_zh_CN.arb
lib/pages/: launch_page.dart
lib/widgets/: actions.dart  file_open_dialog.dart  iconfont.dart  menu.dart  pull_down_wrapper.dart  restore_window.dart  system_tray.dart  veil.dart
lib/windows/: editor_window.dart  launch_window.dart  main_window.dart
linux/: CMakeLists.txt  my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
resources/: StoryistDocument-Flat.icns
src/: app_delegate.rs  file_open_dialog.rs  file_open_dialog_linux.rs  file_open_dialog_mac.rs  file_open_dialog_win.rs  main.rs  store.rs  window.rs
test/: widget_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
