[package]
name = "storyrs"
version = "0.1.0"
authors = ["Matej Knopp <matej.knopp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cargo-emit = "0.2.1"
nativeshell_build = { git = "https://github.com/nativeshell/nativeshell.git" }

[dependencies]
nativeshell = { git = "https://github.com/nativeshell/nativeshell.git" }
env_logger = "0.9.0"
serde = "1.0"
rkv = "0.18"
platform-dirs = "0.3.0"
anyhow = "1.0"
core-graphics = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2.7"
block = "0.1.6"

[target.'cfg(target_os = "windows")'.dependencies]
widestring = "1.0.2"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.43.0"
features = [
    "Win32_UI_Controls_Dialogs"
]

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.14.0"